fine-tuned detrending

--- a/python/demo.ipynb
+++ b/python/demo.ipynb
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "c4c2b543",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1027,7 @@
        "Text(0, 0.5, 'Frequency (Hz)')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1063,16 +1063,16 @@
     "    # Make a generative model using the ARMA parameters\n",
     "    arma_process = sm.tsa.ArmaProcess.from_estimation(result)\n",
     "    # Simulate a bunch of time-courses from the model\n",
-    "    x_sim = arma_process.generate_sample((len(x), k_perm),\n",
-    "                                         scale=result.resid.std())\n",
+    "    x_sim = arma_process.generate_sample((k_perm,len(x)),\n",
+    "                                         scale=result.resid.std(), axis=1)\n",
     "    # Subtract out the mean and linear trend\n",
-    "    x_sim = sm.tsa.tsatools.detrend(x_sim, order=detrend_ord, axis=0)\n",
+    "    x_sim = sm.tsa.tsatools.detrend(x_sim, order=detrend_ord, axis=1)\n",
     "    \n",
     "    amp_prods=np.zeros(k_perm)\n",
     "    pad = np.zeros(n_pts)\n",
     "    \n",
     "    for i in range(k_perm):\n",
-    "        padd_rand_signal = np.hstack([pad, x_sim[:,i], pad])\n",
+    "        padd_rand_signal = np.hstack([pad, x_sim[i,:], pad])\n",
     "\n",
     "        # Get analytic signal (phase and amplitude)\n",
     "        analytic_rand_signal = hilbert(padd_rand_signal, N=None)[n_pts:2 * n_pts]\n",
@@ -1116,7 +1116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14112f8a",
+   "id": "8f6a9cfe",
    "metadata": {},
    "outputs": [],
    "source": []
