--- a/python/demo.ipynb
+++ b/python/demo.ipynb
@@ -308,7 +308,7 @@
     "# Determine the frequency resolution\n",
     "df = np.diff(freqs)[0]\n",
     "\n",
-    "# Zero-pad the signal - or is mean-pad better?\n",
+    "# Zero-pad the signal\n",
     "pad=np.zeros((len(time)))\n",
     "padd_signal = np.hstack([pad, signal, pad])\n",
     "\n",
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "id": "a39a754e",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "id": "5362ea2e",
    "metadata": {},
    "outputs": [],
@@ -714,7 +714,7 @@
     "    # Bandpass filtering using multiplication by a Gaussian kernel\n",
     "    # in the frequency domain\n",
     "\n",
-    "    # Zero-pad the signal - or is mean-pad better?\n",
+    "    # Zero-pad the signal\n",
     "    pad=np.zeros((len(x)))\n",
     "    padd_signal = np.hstack([pad, x, pad])\n",
     "\n",
@@ -753,9 +753,6 @@
     "    # Evaluation time points\n",
     "    eval_pts = np.searchsorted(time, eval_times)\n",
     "    \n",
-    "    # This was evaluated starting at time t=0 and looking 2 cycles ahead, \n",
-    "    # but what about the points in between?\n",
-    "\n",
     "    # Number of points between the first and next evaluation time points\n",
     "    n_range = eval_pts[1] - eval_pts[0]\n",
     "    # Analytic signal at n=0...n_evals-1 evaluation points, and m=0..n_range time points in between\n",
@@ -782,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "id": "1427d238",
    "metadata": {},
    "outputs": [
@@ -792,7 +789,7 @@
        "Text(0, 0.5, 'Lagged coherence')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -829,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "id": "a80def0a",
    "metadata": {},
    "outputs": [
@@ -839,7 +836,7 @@
        "Text(0, 0.5, 'Lagged coherence')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -878,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "id": "f5b4f6f4",
    "metadata": {},
    "outputs": [
@@ -902,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "id": "5f8374ab",
    "metadata": {},
    "outputs": [
@@ -926,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 56,
    "id": "234e9005",
    "metadata": {},
    "outputs": [
@@ -936,7 +933,7 @@
        "Text(0, 0.5, 'Frequency (Hz)')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -972,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 57,
    "id": "da290acc",
    "metadata": {},
    "outputs": [
@@ -982,7 +979,7 @@
        "Text(0, 0.5, 'Frequency (Hz)')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1025,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "id": "c4c2b543",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1032,7 @@
        "Text(0, 0.5, 'Frequency (Hz)')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1124,7 +1121,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "154e918d",
+   "id": "75b3c2df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c75d611",
    "metadata": {},
    "outputs": [],
    "source": []
