fixed comment typo

--- a/python/demo.ipynb
+++ b/python/demo.ipynb
@@ -1060,7 +1060,7 @@
     "    detrend_ord = 1\n",
     "    x = sm.tsa.tsatools.detrend(signal, order=detrend_ord)\n",
     "\n",
-    "    # Estimate an ARMA model\n",
+    "    # Estimate an AR model\n",
     "    mdl_order = (1, 0, 0)\n",
     "    mdl = sm.tsa.ARIMA(x, order=mdl_order)\n",
     "    result = mdl.fit()\n",
