updated x and y labels

--- a/python/plot_figure2.ipynb
+++ b/python/plot_figure2.ipynb
@@ -136,7 +136,7 @@
     "                 alpha=0.25,color=lhc_color)\n",
     "ax1.plot(freqs,m_psd,label='PSD',color=psd_color)\n",
     "ax1.fill_between(freqs, m_psd-sd_psd, m_psd+sd_psd,alpha=0.25,color=psd_color)\n",
-    "ax1.set_xlabel('Frequency (Hz)')\n",
+    "ax1.set_xlabel('frequency (Hz)')\n",
     "ax1.legend()\n",
     "\n",
     "ax2 = fig.add_subplot(gs[0,2:4])\n",
@@ -169,7 +169,7 @@
     "                 alpha=0.25,color=lhc_color)\n",
     "ax2.plot(freqs,m_psd,color=psd_color)\n",
     "ax2.fill_between(freqs, m_psd-sd_psd, m_psd+sd_psd,alpha=0.25,color=psd_color)\n",
-    "ax2.set_xlabel('Frequency (Hz)')\n",
+    "ax2.set_xlabel('frequency (Hz)')\n",
     "\n",
     "ax3 = fig.add_subplot(gs[0,4:6])\n",
     "idx=-1\n",
@@ -201,7 +201,7 @@
     "                 alpha=0.25,color=lhc_color)\n",
     "ax3.plot(freqs,m_psd,color=psd_color)\n",
     "ax3.fill_between(freqs, m_psd-sd_psd, m_psd+sd_psd,alpha=0.25,color=psd_color)\n",
-    "ax3.set_xlabel('Frequency (Hz)')\n",
+    "ax3.set_xlabel('frequency (Hz)')\n",
     "\n",
     "ax4 = fig.add_subplot(gs[1,0:3])\n",
     "m_classic=np.nanmean(classic_rmse,axis=1)\n",
@@ -213,7 +213,7 @@
     "ax4.plot(osc_f,m_hilbert,label='LHC',color=lhc_color)\n",
     "ax4.fill_between(osc_f,m_hilbert-sd_hilbert,m_hilbert+sd_hilbert,alpha=.25,color=lhc_color)\n",
     "ax4.legend()\n",
-    "ax4.set_xlabel('Simulated frequency (Hz)')\n",
+    "ax4.set_xlabel('simulated frequency (Hz)')\n",
     "ax4.set_ylabel('RMSE')\n",
     "\n",
     "ax5 = fig.add_subplot(gs[1,3:6])\n",
@@ -225,8 +225,8 @@
     "sd_hilbert=np.nanstd(hilbert_std,axis=1)\n",
     "ax5.plot(osc_f,m_hilbert,label='LHC',color=lhc_color)\n",
     "ax5.fill_between(osc_f,m_hilbert-sd_hilbert,m_hilbert+sd_hilbert,alpha=.25,color=lhc_color)\n",
-    "ax5.set_xlabel('Simulated frequency (Hz)')\n",
-    "ax5.set_ylabel('Standard deviation')\n",
+    "ax5.set_xlabel('simulated frequency (Hz)')\n",
+    "ax5.set_ylabel('standard deviation')\n",
     "\n",
     "freq_colors = plt.get_cmap('BuPu', 10)\n",
     "f=np.load('../output/sims/burst_dur/sim_results.npz')\n",
