--- a/python/plot_figure4.ipynb
+++ b/python/plot_figure4.ipynb
@@ -1093,9 +1093,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lhc",
+   "display_name": "new_lc",
    "language": "python",
-   "name": "lhc"
+   "name": "new_lc"
   },
   "language_info": {
    "codemirror_mode": {
